--- a/confix.glade
+++ b/confix.glade
@@ -6283,8 +6283,8 @@ Improper values can ruin your filtering scheme. </property>
             <property name="can_focus">False</property>
             <child>
               <object class="GtkScrolledWindow">
-                <property name="visible">True</property>
                 <property name="can_focus">True</property>
+                <property name="no_show_all">True</property>
                 <property name="shadow_type">in</property>
                 <child>
                   <object class="GtkTreeView" id="ports_tree">
