--- a/confix.glade
+++ b/confix.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.2 -->
+<!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.18"/>
   <object class="GtkWindow">
@@ -1649,6 +1649,15 @@ After clicking close, you will be shown the internet filter rule created for you
                             <property name="label" translatable="yes">Network Summary</property>
                             <property name="use_underline">True</property>
                             <signal name="activate" handler="getmac" swapped="no"/>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkMenuItem" id="menu_set_date">
+                            <property name="visible">True</property>
+                            <property name="can_focus">False</property>
+                            <property name="label" translatable="yes">Set Idefix Date</property>
+                            <property name="use_underline">True</property>
+                            <signal name="activate" handler="set_date" swapped="no"/>
                           </object>
                         </child>
                         <child>
@@ -4421,7 +4430,7 @@ Wrong parameters may crash your system</property>
               <object class="GtkLabel" id="label29">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">---</property>
+                <property name="label" translatable="yes">Days</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
@@ -4502,7 +4511,6 @@ Wrong parameters may crash your system</property>
             </child>
             <child>
               <object class="GtkEntry" id="filter_time_condition_days">
-                <property name="visible">True</property>
                 <property name="can_focus">True</property>
                 <property name="max_length">7</property>
                 <property name="invisible_char">●</property>
@@ -4513,17 +4521,6 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
-                <property name="top_attach">1</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkLabel" id="label3">
-                <property name="visible">True</property>
-                <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Days :</property>
-              </object>
-              <packing>
-                <property name="left_attach">0</property>
                 <property name="top_attach">1</property>
               </packing>
             </child>
@@ -4747,6 +4744,16 @@ Wrong parameters may crash your system</property>
               <packing>
                 <property name="left_attach">0</property>
                 <property name="top_attach">4</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel" id="label3">
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Days :</property>
+              </object>
+              <packing>
+                <property name="left_attach">0</property>
+                <property name="top_attach">1</property>
               </packing>
             </child>
           </object>
