--- a/confix.glade
+++ b/confix.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.1 -->
+<!-- Generated with glade 3.22.2 -->
 <interface>
   <requires lib="gtk+" version="3.18"/>
   <object class="GtkWindow">
@@ -4967,7 +4967,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">4</property>
+                <property name="top_attach">5</property>
                 <property name="width">4</property>
               </packing>
             </child>
@@ -5000,11 +5000,12 @@ Wrong parameters may crash your system</property>
                 <property name="label" translatable="yes">DHCP Settings (wlan0 - Raspberry Pi)</property>
                 <attributes>
                   <attribute name="weight" value="bold"/>
+                  <attribute name="background" value="#fcfcafaf3e3e"/>
                 </attributes>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">12</property>
+                <property name="top_attach">13</property>
                 <property name="width">4</property>
               </packing>
             </child>
@@ -5016,7 +5017,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">13</property>
+                <property name="top_attach">14</property>
               </packing>
             </child>
             <child>
@@ -5027,7 +5028,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">2</property>
-                <property name="top_attach">13</property>
+                <property name="top_attach">14</property>
               </packing>
             </child>
             <child>
@@ -5042,7 +5043,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">14</property>
+                <property name="top_attach">15</property>
                 <property name="width">4</property>
               </packing>
             </child>
@@ -5054,7 +5055,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">16</property>
+                <property name="top_attach">17</property>
               </packing>
             </child>
             <child>
@@ -5065,7 +5066,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">2</property>
-                <property name="top_attach">16</property>
+                <property name="top_attach">17</property>
               </packing>
             </child>
             <child>
@@ -5076,7 +5077,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">15</property>
+                <property name="top_attach">16</property>
               </packing>
             </child>
             <child>
@@ -5091,7 +5092,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">17</property>
+                <property name="top_attach">18</property>
                 <property name="width">4</property>
               </packing>
             </child>
@@ -5103,7 +5104,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">18</property>
+                <property name="top_attach">19</property>
               </packing>
             </child>
             <child>
@@ -5114,7 +5115,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">19</property>
+                <property name="top_attach">20</property>
               </packing>
             </child>
             <child>
@@ -5125,7 +5126,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">2</property>
-                <property name="top_attach">19</property>
+                <property name="top_attach">20</property>
               </packing>
             </child>
             <child>
@@ -5140,7 +5141,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">20</property>
+                <property name="top_attach">21</property>
                 <property name="width">4</property>
               </packing>
             </child>
@@ -5152,7 +5153,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">22</property>
+                <property name="top_attach">23</property>
               </packing>
             </child>
             <child>
@@ -5163,7 +5164,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">2</property>
-                <property name="top_attach">22</property>
+                <property name="top_attach">23</property>
               </packing>
             </child>
             <child>
@@ -5174,7 +5175,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">23</property>
+                <property name="top_attach">24</property>
               </packing>
             </child>
             <child>
@@ -5185,7 +5186,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">2</property>
-                <property name="top_attach">23</property>
+                <property name="top_attach">24</property>
               </packing>
             </child>
             <child>
@@ -5196,7 +5197,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">24</property>
+                <property name="top_attach">25</property>
               </packing>
             </child>
             <child>
@@ -5268,7 +5269,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
-                <property name="top_attach">13</property>
+                <property name="top_attach">14</property>
               </packing>
             </child>
             <child>
@@ -5280,7 +5281,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">3</property>
-                <property name="top_attach">13</property>
+                <property name="top_attach">14</property>
               </packing>
             </child>
             <child>
@@ -5292,7 +5293,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
-                <property name="top_attach">15</property>
+                <property name="top_attach">16</property>
               </packing>
             </child>
             <child>
@@ -5303,7 +5304,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
-                <property name="top_attach">16</property>
+                <property name="top_attach">17</property>
               </packing>
             </child>
             <child>
@@ -5318,7 +5319,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">3</property>
-                <property name="top_attach">16</property>
+                <property name="top_attach">17</property>
               </packing>
             </child>
             <child>
@@ -5331,7 +5332,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
-                <property name="top_attach">19</property>
+                <property name="top_attach">20</property>
               </packing>
             </child>
             <child>
@@ -5344,7 +5345,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">3</property>
-                <property name="top_attach">19</property>
+                <property name="top_attach">20</property>
               </packing>
             </child>
             <child>
@@ -5356,7 +5357,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
-                <property name="top_attach">23</property>
+                <property name="top_attach">24</property>
               </packing>
             </child>
             <child>
@@ -5369,7 +5370,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
-                <property name="top_attach">24</property>
+                <property name="top_attach">25</property>
               </packing>
             </child>
             <child>
@@ -5383,7 +5384,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">3</property>
-                <property name="top_attach">23</property>
+                <property name="top_attach">24</property>
               </packing>
             </child>
             <child>
@@ -5423,7 +5424,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
-                <property name="top_attach">18</property>
+                <property name="top_attach">19</property>
               </packing>
             </child>
             <child>
@@ -5443,7 +5444,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
-                <property name="top_attach">22</property>
+                <property name="top_attach">23</property>
               </packing>
             </child>
             <child>
@@ -5463,7 +5464,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">3</property>
-                <property name="top_attach">22</property>
+                <property name="top_attach">23</property>
               </packing>
             </child>
             <child>
@@ -5478,7 +5479,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">9</property>
+                <property name="top_attach">10</property>
                 <property name="width">4</property>
               </packing>
             </child>
@@ -5486,25 +5487,11 @@ Wrong parameters may crash your system</property>
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Enabled</property>
+                <property name="label" translatable="yes">Interface</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">10</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkCheckButton" id="idefix2_wifi_enabled">
-                <property name="label" translatable="yes"> </property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">False</property>
-                <property name="draw_indicator">True</property>
-                <signal name="toggled" handler="idefix2_entry_changed" swapped="no"/>
-              </object>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">10</property>
+                <property name="top_attach">7</property>
               </packing>
             </child>
             <child>
@@ -5557,25 +5544,11 @@ Wrong parameters may crash your system</property>
               <object class="GtkLabel">
                 <property name="visible">True</property>
                 <property name="can_focus">False</property>
-                <property name="label" translatable="yes">Enabled</property>
+                <property name="label" translatable="yes">Interface</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">5</property>
-              </packing>
-            </child>
-            <child>
-              <object class="GtkCheckButton" id="idefix2_lan_enabled">
-                <property name="label" translatable="yes"> </property>
-                <property name="visible">True</property>
-                <property name="can_focus">True</property>
-                <property name="receives_default">False</property>
-                <property name="draw_indicator">True</property>
-                <signal name="toggled" handler="idefix2_entry_changed" swapped="no"/>
-              </object>
-              <packing>
-                <property name="left_attach">1</property>
-                <property name="top_attach">5</property>
+                <property name="top_attach">4</property>
               </packing>
             </child>
             <child>
@@ -5589,7 +5562,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">7</property>
+                <property name="top_attach">8</property>
                 <property name="width">4</property>
               </packing>
             </child>
@@ -5601,7 +5574,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">0</property>
-                <property name="top_attach">8</property>
+                <property name="top_attach">9</property>
               </packing>
             </child>
             <child>
@@ -5612,7 +5585,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">2</property>
-                <property name="top_attach">8</property>
+                <property name="top_attach">9</property>
               </packing>
             </child>
             <child>
@@ -5624,7 +5597,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">1</property>
-                <property name="top_attach">8</property>
+                <property name="top_attach">9</property>
               </packing>
             </child>
             <child>
@@ -5636,7 +5609,7 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">3</property>
-                <property name="top_attach">8</property>
+                <property name="top_attach">9</property>
               </packing>
             </child>
             <child>
@@ -5650,8 +5623,58 @@ Wrong parameters may crash your system</property>
               </object>
               <packing>
                 <property name="left_attach">3</property>
-                <property name="top_attach">21</property>
+                <property name="top_attach">22</property>
               </packing>
+            </child>
+            <child>
+              <object class="GtkEntry" id="idefix2_wan_port">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <signal name="focus-out-event" handler="idefix2_entry_changed" swapped="no"/>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="top_attach">4</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEntry" id="idefix2_lan_ports">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <signal name="focus-out-event" handler="idefix2_entry_changed" swapped="no"/>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="top_attach">7</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkLabel">
+                <property name="visible">True</property>
+                <property name="can_focus">False</property>
+                <property name="label" translatable="yes">Interface</property>
+              </object>
+              <packing>
+                <property name="left_attach">0</property>
+                <property name="top_attach">12</property>
+              </packing>
+            </child>
+            <child>
+              <object class="GtkEntry" id="idefix2_wifi_port">
+                <property name="visible">True</property>
+                <property name="can_focus">True</property>
+                <signal name="focus-out-event" handler="idefix2_entry_changed" swapped="no"/>
+              </object>
+              <packing>
+                <property name="left_attach">1</property>
+                <property name="top_attach">12</property>
+              </packing>
+            </child>
+            <child>
+              <placeholder/>
+            </child>
+            <child>
+              <placeholder/>
             </child>
             <child>
               <placeholder/>
