--- a/groupdbmanager/main.glade
+++ b/groupdbmanager/main.glade
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.1 -->
+<!-- Generated with glade 3.22.2 -->
 <interface>
-  <requires lib="gtk+" version="3.20"/>
+  <requires lib="gtk+" version="3.18"/>
   <object class="GtkListStore" id="diff_store">
     <columns>
       <!-- column-name domain -->
@@ -78,7 +78,7 @@
     <property name="default_width">640</property>
     <property name="default_height">480</property>
     <signal name="destroy" handler="quit" swapped="no"/>
-    <child>
+    <child type="titlebar">
       <placeholder/>
     </child>
     <child>
