--- a/confix.glade
+++ b/confix.glade
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Generated with glade 3.22.2 -->
+<!-- Generated with glade 3.22.1 -->
 <interface>
   <requires lib="gtk+" version="3.18"/>
   <object class="GtkWindow">
@@ -1882,11 +1882,10 @@ After clicking close, you will be shown the internet filter rule created for you
                         <property name="can_focus">False</property>
                         <child>
                           <object class="GtkButton" id="save_button1">
-                            <property name="label">gtk-save</property>
+                            <property name="label" translatable="yes">Send configuration to Idefix</property>
                             <property name="visible">True</property>
                             <property name="can_focus">True</property>
                             <property name="receives_default">True</property>
-                            <property name="use_stock">True</property>
                             <property name="always_show_image">True</property>
                             <signal name="clicked" handler="build_files" swapped="no"/>
                           </object>
@@ -2409,11 +2408,10 @@ After clicking close, you will be shown the internet filter rule created for you
                             <property name="can_focus">False</property>
                             <child>
                               <object class="GtkButton" id="save_button2">
-                                <property name="label">gtk-save</property>
+                                <property name="label" translatable="yes">Send configuration to Idefix</property>
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
                                 <property name="receives_default">True</property>
-                                <property name="use_stock">True</property>
                                 <property name="always_show_image">True</property>
                                 <signal name="clicked" handler="build_files" swapped="no"/>
                               </object>
@@ -5641,7 +5639,6 @@ Wrong parameters may crash your system</property>
               <object class="GtkEntry" id="idefix2_lan_ports">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <signal name="changed" handler="update_interfaces" swapped="no"/>
                 <signal name="focus-out-event" handler="idefix2_entry_changed" swapped="no"/>
               </object>
               <packing>
@@ -5664,7 +5661,6 @@ Wrong parameters may crash your system</property>
               <object class="GtkEntry" id="idefix2_wifi_port">
                 <property name="visible">True</property>
                 <property name="can_focus">True</property>
-                <signal name="changed" handler="update_interfaces" swapped="no"/>
                 <signal name="focus-out-event" handler="idefix2_entry_changed" swapped="no"/>
               </object>
               <packing>
